@@ -7,18 +7,21 @@ import nz.net.kallisti.emusicj.controller.IPreferences;
 import com.google.inject.Inject;
 
 /**
- * <p>Contains strings specific to the Naxos implementation</p>
+ * <p>
+ * Contains strings specific to the Naxos implementation
+ * </p>
  * 
  * $Id:$
- *
+ * 
  * @author robin
  */
-public class NaxosStrings implements IStrings {
-	
+public class NaxosStrings extends AbstractStrings {
+
 	private final IPreferences prefs;
 
 	@Inject
 	public NaxosStrings(IPreferences prefs) {
+		super(prefs);
 		this.prefs = prefs;
 	}
 
@@ -29,61 +32,60 @@ public class NaxosStrings implements IStrings {
 	public String getShortAppName() {
 		return "Classicsonline";
 	}
-	
+
 	public String getAppPathname() {
 		return "classicsonline";
 	}
-	
+
 	public String getFileNamingDetails() {
 		return "%a=album, %n=track number, %t=track name";
 	}
 
 	public String[] getOpenDialogueFilterExtensions() {
-		return new String [] {"*.col", "*.*"};
+		return new String[] { "*.col", "*.*" };
 	}
 
 	public String[] getOpenDialogueFilterNames() {
-		return new String [] {"col files (*.col)","All Files (*.*)"};
+		return new String[] { "col files (*.col)", "All Files (*.*)" };
 	}
-	
+
 	public String getAutoLoadDescription() {
 		return "Automatically load .col files from:";
 	}
 
 	public String getAboutBoxText() {
-		return "Classicsonline Download Manager v0.20, Copyright (C) 2006, 2007 Robin Sheat <robin@kallisti.net.nz>\n\n"+ 
+		return "Classicsonline Download Manager "
+				+ getVersion()
+				+ ", Copyright (C) 2006-2009 Robin Sheat <robin@kallisti.net.nz>\n\n"
+				+
 
-		"The Classicsonline Download Manager comes with ABSOLUTELY NO WARRANTY. "+
-		"This is free software, and you are welcome to redistribute it under the "+
-		"terms of the GNU General Public License. A copy of this is contained in "+
-		"the file 'COPYING'.\n\n"+
+				"The Classicsonline Download Manager comes with ABSOLUTELY NO WARRANTY. "
+				+ "This is free software, and you are welcome to redistribute it under the "
+				+ "terms of the GNU General Public License. A copy of this is contained in "
+				+ "the file 'COPYING'.\n\n" +
 
-		"Artwork Copyright (C) 2007 Classicsonline.com and Naxos Digital Rights Ltd";
+				"Artwork Copyright (C) 2007 Classicsonline.com and Naxos Digital Rights Ltd";
 	}
 
 	public String getDefaultFilePattern() {
-		return "%a"+ File.separatorChar+"%t";
+		return "%a" + File.separatorChar + "%t";
 	}
 
 	public String getXMLBaseNodeName() {
 		return "classicsonline-state";
 	}
-	
+
 	public String getVersion() {
 		return "1.1";
 	}
 
+	@Override
 	public String getCoverArtName() {
 		String userDefined = prefs.getCoverArtFilename();
 		if (userDefined != null)
 			return userDefined;
-		// If we're on windows or mac, we return 'folder.jpg'
-		String os = System.getProperty("os.name");
-		if (os != null && (os.toLowerCase().contains("windows")
-				|| os.toLowerCase().contains("mac os x"))) {
-			return "folder";
-		}
-		return "cover";
+		// Naxos wants 'album' as the name
+		return "album";
 	}
 
 }
